--- a/weather-app/package.json
+++ b/weather-app/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "node",
+  "name": "weather-app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "chalk": "^4.1.2",
-    "validator": "^13.6.0",
-    "yargs": "^17.1.1"
+    "postman-request": "^2.88.1-postman.30",
+    "yargs": "^17.2.0"
   }
 }
